# steam-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/steam_cli/: analysis.py  cache.py  config.py  exporter.py  main.py  models.py  parser.py  scanner.py  settings.py  store.py  webapi.py
tests/: test_analysis.py  test_cache.py  test_config.py  test_exporter.py  test_main.py  test_parser.py  test_scanner.py  test_settings.py  test_store.py  test_webapi.py
tools/: windows_exe_entry.py
