[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-cli"
version = "0.4.0"
description = "A lightweight CLI for listing installed Steam games on Windows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "isort>=5.13",
]

[project.scripts]
steam-cli = "steam_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
